# curator

./: .coverage  README.md  curator_progress.md  pyproject.toml
db/migrations/: 001_initial_schema.sql  002_add_parent_platform.sql  003_add_organisation.sql  004_add_status.sql
db/seeds/: seed_platforms.sql
deploy/: Containerfile.app  Containerfile.db  podman-compose.yml
docs/: API_GUIDE.md  ARCHITECTURE.md  CONTAINER_BUILD_GUIDE.md  DEPLOYMENT_GUIDE.md  MAINTENANCE_GUIDE.md  RACI.md  RBAC.md  SECURITY_COMPLIANCE.md  Sentinel_Curator.md  UI_GUIDE.md  USER_GUIDE.md
scripts/: apply_migrations.py
src/sentinel_curator/: __init__.py
src/sentinel_curator/api/: main.py
src/sentinel_curator/curator/: __init__.py  agent.py  sql_guard.py
src/sentinel_curator/models/: __init__.py  base.py  country.py  geolocation_log.py  individual_platform.py  organisation.py  platform_class.py  platform_mount.py  platform_rwr.py  rwr_system.py  status.py  weapon_mount.py
src/sentinel_curator/rbac/: __init__.py  roles.py
src/sentinel_curator/utils/: __init__.py  config.py  logging.py
tests/: conftest.py  test_rbac.py  test_sql_guard.py
